@@ -96,19 +96,42 @@ class player_class:
                     else:
                         #Construction of items:
                         tmp = 0
+                        first_build_count = 0
                         for item in base_name.usage:
+                            if item.built == 1:
+                                first_build_count += 1
                             if item == 0: continue
                             tmp = item.work_on(time_min) or tmp
                         if tmp == 1:
-                            needs_refresh = 1
-                            g.create_dialog(g.strings["construction0"]+" "+
-                                item.item_type.name+" "+
-                                g.strings["item_construction1"]+" "+
-                                base_name.name+".",
-                                g.font[0][18], (g.screen_size[0]/2 - 100, 50),
-                                (200, 200), g.colors["dark_blue"],
-                                g.colors["white"], g.colors["white"])
-                            g.curr_speed = 1
+                            #Check if ALL CPUs are built, stay silent until then.
+                            #Using build count and first_build count to check against CPUs at start of day and end of day.
+                            #If the total goes from 0 to any amount over 0, it will trigger a new dialog, completed first batch.
+                            build_complete = 1
+                            build_count = 0
+                            for item_index in base_name.usage:
+                                if item_index.built == 0:
+                                    build_complete = 0
+                                    continue
+                                build_count += 1
+                            if first_build_count == 0 and build_count > 0:
+                                needs_refresh = 1
+                                g.create_dialog(g.strings["construction0"]+" "+
+                                    item.item_type.name+" "+
+                                    g.strings["item_construction2"]+" "+
+                                    base_name.name+".",
+                                    g.font[0][18], (g.screen_size[0]/2 - 100, 50),
+                                    (200, 200), g.colors["dark_blue"],
+                                    g.colors["white"], g.colors["white"])
+                            elif build_complete == 1:
+                                needs_refresh = 1
+                                g.create_dialog(g.strings["construction0"]+" "+
+                                    item.item_type.name+" "+
+                                    g.strings["item_construction1"]+" "+
+                                    base_name.name+".",
+                                    g.font[0][18], (g.screen_size[0]/2 - 100, 50),
+                                    (200, 200), g.colors["dark_blue"],
+                                    g.colors["white"], g.colors["white"])
+                                g.curr_speed = 1
                         for item in base_name.extra_items:
                             if item == 0: continue
                             tmp = item.work_on(time_min)
